# bmpLib

./: CMakeLists.txt  README.md  bmpLibGlobal.h  bmpsupporter.cpp  bmpsupporter.h  main.cpp
